recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:19: error: '<-' expected but ';' found.
  for(i; i < 4; i++)
       ^FourSquare:19: error: '<-' expected but ';' found.
  for(i; i < 4; i++)
              ^FourSquare:19: error: illegal start of simple pattern
  for(i; i < 4; i++)
                   ^FourSquare:24: error: illegal start of simple expression
} 
^